After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711285 - Cannot play remote files (sftp/gvfs) in library
Cannot play remote files (sftp/gvfs) in library
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: playback
3.0
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-02 11:52 UTC by Paul van Tilburg
Modified: 2013-11-08 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Log file when playing a track over sftp (16.43 KB, text/x-log)
2013-11-03 10:15 UTC, Paul van Tilburg
Details
Log of full traces (49.74 KB, text/x-log)
2013-11-05 08:51 UTC, Paul van Tilburg
Details
Log when running GST_DEBUG:*4 rhythmbox -D player (343.19 KB, text/x-log)
2013-11-07 18:06 UTC, Paul van Tilburg
Details

Description Paul van Tilburg 2013-11-02 11:52:01 UTC
On my laptop I use a remote folder as music library (i.e. it is configured to use sftp://local-nas/path/to/Music) using GVFS.  Since 3.0 (and/or the switch to GStreamer 1.0) I cannot play any of the files in the library.
Everything is imported/scanned ok, put double clicking on a track it stays in pause mode.  It also seems that rhythmbox --debug doesn't reveal any issues.

P.S. I use the crossfading backend.
Comment 1 Jonathan Matthew 2013-11-03 06:55:31 UTC
What exact versions of gstreamer, gst-plugins-base, gst-plugins-good etc. are you using? What types of files are you playing?  Does gst-launch-1.0 playbin uri=sftp://etc/ work?

Please attach output from 'rhythmbox -D player' when trying to play such files.
Comment 2 Paul van Tilburg 2013-11-03 10:15:11 UTC
Created attachment 258838 [details]
Log file when playing a track over sftp
Comment 3 Paul van Tilburg 2013-11-03 10:15:43 UTC
I'm using Debian unstable, so at the moment this means gstreamer, gst-plugins* are all on version 1.2.0.

I usually play FLAC files, but the same happens with Ogg Vorbis and MP3s
and I can use gst-launch-1.0 (or gst123) with the sftp URI to play them.

I have attached the log.
Comment 4 Jonathan Matthew 2013-11-04 10:11:44 UTC
> (rhythmbox:27007): GLib-CRITICAL **: g_main_context_push_thread_default: assertion 'acquired_context' failed

> (rhythmbox:27007): GLib-CRITICAL **: g_main_context_pop_thread_default: assertion 'g_queue_peek_head (stack) == context' failed

stack traces from these would be helpful. run 'rhythmbox -D something' in gdb and it'll break on all warnings and criticals so you can do 'thread apply all bt' there.
Comment 5 Paul van Tilburg 2013-11-05 08:51:03 UTC
Created attachment 258989 [details]
Log of full traces

Note that these CRITICAL events happen before I press play.  They seem to be raised when the library is being checked/updated.
When I continue through the exceptions and then press play, I don't get one.
Comment 6 Jonathan Matthew 2013-11-05 09:25:05 UTC
but it still doesn't play?
Comment 7 Jonathan Matthew 2013-11-05 09:58:21 UTC
in any case it looks like I need to rewrite rb_handle_uri_recursively_async to use async file enumerators rather than using a separate thread.  kind of annoying.
Comment 8 Jonathan Matthew 2013-11-05 21:30:22 UTC
Disabling library monitoring might help.
Comment 9 Paul van Tilburg 2013-11-06 09:51:41 UTC
It still doesn't play, also disabling library monitoring didn't help.
What _does_ help is to disable the crossfading backend, so that allows me at least play from my library :).
Comment 10 Jonathan Matthew 2013-11-06 11:46:12 UTC
can you provide a log from 'GST_DEBUG=*:4 rhythmbox -D player' with crossfading enabled?
Comment 11 Paul van Tilburg 2013-11-07 18:06:31 UTC
Created attachment 259210 [details]
Log when running GST_DEBUG:*4 rhythmbox -D player
Comment 12 Jonathan Matthew 2013-11-07 22:32:48 UTC
turns out this is just because we're expecting gstreamer to give us buffering events for sftp streams, but it doesn't do that any more.
Comment 13 Jonathan Matthew 2013-11-08 13:37:21 UTC
fixed in commit f326f8e