xfade: fix playback over sftp with gstreamer 1.2

uridecodebin now does a scheduling query to figure out whether the
source requires buffering.  We need to do the same so our expectation
matches what uridecodebin does.  If we expect buffering messages
but don't get any, we never start normal playback.

https://bugzilla.gnome.org/show_bug.cgi?id=711285